# ga_guru_diploma

./: pyproject.toml  pytest.ini
data/company/: company.csv  company.py
data/members/: members.py
data/members/resourses/: member.csv
pages/: company_information_page.py  company_service_page.py  control_panel_page.py  incorporation_plan_page.py  members_incorporation_page.py  onboarding_page.py  registration_page.py
queries/: users.py
schemas/: user.py
tests/: conftest.py
tests/tests_api/: test_active_plan.py  test_login.py  test_plans.py
tests/tests_ui/: test_incorporation_e.py  test_incorporation_nl.py  test_incorporation_no_e.py  test_transfer_est.py  test_transfer_nl.py
utils/: helper.py
